objects/MaintenanceContractManagement__c.object
<CustomObject>
    <fields>
        <fullName>AnnaiType__c</fullName>
        <label>案内種類</label>
        <picklist>
            <picklistValues>
                <fullName>1page</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2pages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillingMethodHelium__c</fullName>
        <label>請求方法（ヘリウム）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMethodHontai__c</fullName>
        <label>請求方法（本体）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMethod__c</fullName>
        <formula>IF( AND (OR(ISBLANK(BillingMethodHontai__c),ISNULL(BillingMethodHontai__c)), OR(ISBLANK(BillingMethodHelium__c),ISNULL(BillingMethodHelium__c)))  , &apos;&apos;, 

IF( AND (!OR(ISBLANK(BillingMethodHontai__c),ISNULL(BillingMethodHontai__c)), !OR(ISBLANK(BillingMethodHelium__c),ISNULL(BillingMethodHelium__c)))  , BillingMethodHontai__c + &apos;/&apos; + BillingMethodHelium__c, 

IF( !OR(ISBLANK(BillingMethodHontai__c),ISNULL(BillingMethodHontai__c)), BillingMethodHontai__c, BillingMethodHelium__c

)

)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>請求方法</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingTogether__c</fullName>
        <defaultValue>false</defaultValue>
        <label>まとめ請求</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassTriggerCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassTriggerCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractAmountLine__c</fullName>
        <formula>SalesAmountEstimateSum__c + SalesReturnAmountReal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>管理台帳総合金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractAmounttNEQTotalAmount__c</fullName>
        <formula>NewOdrContractAmountt__c  &lt;&gt;  NewOdrSalesOrder__r.TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約金額≠販売オーダ額</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractDiscontinuationAmount__c</fullName>
        <formula>IF(NewOdrContractAmountt__c = 0, PreviousYearOrder__r.AmountOfContract__c , NewOdrContractAmountt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約中止金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractImpossibleReason__c</fullName>
        <label>契約不可理由</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractImpossible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>契約不可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractSentDate__c</fullName>
        <label>契約書類送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullVersionNumber__c</fullName>
        <label>バージョン</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HidePipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighlightEFEndDate__c</fullName>
        <formula>UnitBodyEFEndDateFormula__c &gt;= DATE( YEAR(UnitBodyAcceptanceDateFormula__c) + 1, MONTH(UnitBodyAcceptanceDateFormula__c), DAY(UnitBodyAcceptanceDateFormula__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HighlightEFEndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncrementVersionNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IncrementVersionNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InquiryMaintenancePossibity__c</fullName>
        <label>アンケート・保守可能性</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InquiryPriceList__c</fullName>
        <label>アンケート・価格表</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InquiryQuotation__c</fullName>
        <label>アンケート・見積書</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InquiryRepayment__c</fullName>
        <label>アンケート・返却</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsHontai__c</fullName>
        <formula>SubAmountHontaiInspec__c +  SubAmountHontaiNoInspecRollup__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsHontai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JEOLContactPosition__c</fullName>
        <label>日本電子・連絡先（担当者所属）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLContactTel__c</fullName>
        <label>日本電子・連絡先（電話番号等）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLRegionName__c</fullName>
        <label>日本電子・連絡先（支店）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLReplyContactFax__c</fullName>
        <label>日本電子・回答先（FAX等）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLReplyContactPosition__c</fullName>
        <label>日本電子・回答先（担当者所属）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLReplyRegionName__c</fullName>
        <label>日本電子・回答先（支店）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JeolPipelineResponsible2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>更新案内担当者2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MCM_JeolPipelineResponsible2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JeolPipelineResponsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>更新案内担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MainPipeline_JeolResp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JuchuKakudoValue__c</fullName>
        <formula>IF ( ISBLANK(NewOdrSalesPipeline__c), NULL, NewOdrSalesPipeline__r.JuchuKakudoValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注確度</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LastLinkBaaN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastLinkBaaN</label>
        <referenceTo>MaintenanceLinkOrder__c</referenceTo>
        <relationshipLabel>保守契約管理</relationshipLabel>
        <relationshipName>LastLinkBaaN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkBaaNDateComparewithLastModifiedDate__c</fullName>
        <description>最終連携日時＜最終更新日</description>
        <formula>LinkBaaNDate__c  &lt;  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>連携日＜更新日</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkBaaNDate__c</fullName>
        <description>BAAN連携データの最終連携日時を表示</description>
        <label>最終連携日時</label>
        <summarizedField>MaintenanceLinkOrder__c.ifdt__c</summarizedField>
        <summaryForeignKey>MaintenanceLinkOrder__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LinkBaaNStatus__c</fullName>
        <formula>IF (LastLinkBaaN__c == null, &apos;未連携&apos;, 
  IF (TEXT(LastLinkBaaN__r.clyn__c) == &apos;1&apos;,
      IF (TEXT(LastLinkBaaN__r.ifst__c) == &apos;2&apos;, &apos;取消済&apos;,
      IF (TEXT(LastLinkBaaN__r.ifst__c) == &apos;5&apos;, &apos;取消済（警告あり）&apos;,
      IF (OR (TEXT(LastLinkBaaN__r.ifst__c) == &apos;3&apos;, TEXT(LastLinkBaaN__r.ifst__c) == &apos;4&apos;), &apos;取消失敗&apos;,
      &apos;取消中&apos;
  ))),
      IF (TEXT(LastLinkBaaN__r.ifst__c) == &apos;2&apos;, &apos;連携済&apos;,
      IF (TEXT(LastLinkBaaN__r.ifst__c) == &apos;5&apos;, &apos;連携済（警告あり）&apos;,
      IF (OR (TEXT(LastLinkBaaN__r.ifst__c) == &apos;3&apos;, TEXT(LastLinkBaaN__r.ifst__c) == &apos;4&apos;), &apos;連携失敗&apos;,
      &apos;連携中&apos;
  )))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>連携ステータス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceStartYearMonth__c</fullName>
        <formula>LPAD(TEXT(YEAR( NewOdrMaintenanceStartDate__c )),4,&apos;0&apos;)+&quot;/&quot;+LPAD(TEXT(MONTH(NewOdrMaintenanceStartDate__c )),2,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約開始年月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxOrderDocNumber__c</fullName>
        <description>Technical field used to determine the next number of an Order doc</description>
        <label>MaxOrderDocNumber</label>
        <summarizedField>MaintenanceOrderDocument__c.SerialNumber__c</summarizedField>
        <summaryForeignKey>MaintenanceOrderDocument__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewContractAmount__c</fullName>
        <label>契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewContractEndDate__c</fullName>
        <label>契約完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewContractPeriod__c</fullName>
        <formula>TRIM(SUBSTITUTE(TEXT(NewContractStartDate__c), &apos;-&apos;, &apos;/&apos;) &amp; &apos; - &apos; &amp; SUBSTITUTE(TEXT(NewContractEndDate__c), &apos;-&apos;, &apos;/&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewContractStartDate__c</fullName>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewOdrAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>アシスタント</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDM_Assistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrAtt__c</fullName>
        <label>ATT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewOdrCommissionOrderAmount__c</fullName>
        <label>支払口銭金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewOdrCommissionPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>口銭支払先</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.SalesAccountFlag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>保守契約管理 (口銭支払先)</relationshipLabel>
        <relationshipName>MCM_NewOdrCommissionPaymentCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrContractAmountt__c</fullName>
        <label>保守契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewOdrContractDivision__c</fullName>
        <label>契約区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrDepartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オフィス</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>保守契約管理</relationshipLabel>
        <relationshipName>MDM_Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrFiscalYear__c</fullName>
        <label>年度</label>
        <picklist>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrFlagshipProduct__c</fullName>
        <label>商品名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrMaintenanceEndDate__c</fullName>
        <label>保守契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewOdrMaintenancePeriodText__c</fullName>
        <formula>TRIM(SUBSTITUTE(TEXT(NewOdrMaintenanceStartDate__c), &apos;-&apos;, &apos;/&apos;) &amp; &apos; - &apos; &amp; SUBSTITUTE(TEXT(NewOdrMaintenanceEndDate__c), &apos;-&apos;, &apos;/&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrMaintenanceStartDate__c</fullName>
        <label>保守契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewOdrMaintenanceType__c</fullName>
        <label>保守種類</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrNetMaintenance__c</fullName>
        <label>NET保守区分</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrNewUpdated__c</fullName>
        <label>新規／更新</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrNotices1__c</fullName>
        <label>特記事項１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewOdrNotices2__c</fullName>
        <label>特記事項２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewOdrOrderDate__c</fullName>
        <label>オーダ日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewOdrOrdersMemp__c</fullName>
        <label>受注メモ</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrOther1__c</fullName>
        <label>その他１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewOdrOther2__c</fullName>
        <label>その他２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewOdrQuotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見積書</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QuotationInformation__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>PCS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QuotationInformation__c</referenceTo>
        <relationshipLabel>保守契約管理</relationshipLabel>
        <relationshipName>MCM_Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrReferenceOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>関連オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>保守契約管理 (関連オーダ)</relationshipLabel>
        <relationshipName>MDM_NewOdrReferenceOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrRegion__c</fullName>
        <label>地域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrRepairParts__c</fullName>
        <label>修理部品</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewOdrRoutineCheck__c</fullName>
        <defaultValue>0</defaultValue>
        <label>定期点検(回数)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.SalesAccountFlag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.SalesAccountSituation__c</field>
                <operation>notEqual</operation>
                <value>無効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>保守契約管理 (販売先取引先)</relationshipLabel>
        <relationshipName>SalesOdr_Pipeline_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactFax__c</fullName>
        <label>販売先担当者FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactPosition__c</fullName>
        <label>販売先担当者所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactPost__c</fullName>
        <label>販売先担当者役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactTel__c</fullName>
        <label>販売先担当者TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesNoOfTimes__c</fullName>
        <label>売上回数</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesOrderLabel__c</fullName>
        <description>Updated in Before Upsert trigger only
Used for the Global Search</description>
        <label>NewOdrSalesOrderLabel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>保守契約管理 (販売オーダ)</relationshipLabel>
        <relationshipName>NewOdrSalesOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesPipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業パイプライン</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>保守契約管理</relationshipLabel>
        <relationshipName>MCM_SalesPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDM_SalesStaff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesTantoshya__c</fullName>
        <label>販売先担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSeries__c</fullName>
        <label>系列</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrShareOrderAmount__c</fullName>
        <label>商社取分金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先取引先</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ShipmentAccountFlag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.ShipmentAccountSituation__c</field>
                <operation>notEqual</operation>
                <value>無効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>保守契約管理 (出荷先取引先)</relationshipLabel>
        <relationshipName>SalesOdr_Pipeline_Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContactPosition__c</fullName>
        <label>出荷先担当者所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContactPost__c</fullName>
        <label>出荷先担当者役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContact_Fax__c</fullName>
        <label>出荷先担当者FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContact_Tel__c</fullName>
        <label>出荷先担当者TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentTantosha__c</fullName>
        <label>出荷先担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrTradingCompanyInvolved__c</fullName>
        <label>商社関与区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrTroubleshooting__c</fullName>
        <label>故障修理</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NextYearNotes__c</fullName>
        <label>次年度申送事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PipelineStoppedDate__c</fullName>
        <label>契約中止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PipelineStoppedReason__c</fullName>
        <label>契約中止理由</label>
        <picklist>
            <picklistValues>
                <fullName>H01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H99_TORIKESHI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PipelineStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the process of renewal of the maintenance contract has been stopped</description>
        <label>契約中止</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrevYearPLStatus__c</fullName>
        <formula>CASE(TEXT(PreviousYearPipeline__r.Status__c),
     &apos;1&apos;, &apos;契約手続中&apos;,
     &apos;2&apos;, &apos;契約中&apos;,
     &apos;3&apos;, &apos;更新手続中&apos;,
     &apos;4&apos;, &apos;更新済&apos;,
     &apos;5&apos;, &apos;契約終了&apos;,
     &apos;6&apos;, &apos;中途解約&apos;,
     &apos;7&apos;, &apos;契約中止&apos;,
     &apos;8&apos;, &apos;契約不成立&apos;,
     &apos;9&apos;, &apos;無効&apos;,
     TEXT(PreviousYearPipeline__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>前年ステータス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrevYrOrderMaintenanceEndDateFormula__c</fullName>
        <description>Technical: In order to be used in an OutputField.
If not, when the PreviousYearOrder is null, Today is shown instead of NULL.</description>
        <formula>PreviousYearOrder__r.MaintenanceEndDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>前年契約日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousYearOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前年オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipName>PreviousYearOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousYearPipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前年保守契約管理</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipName>PreviousYearPipeline_lkup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotationCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>見積書作成</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuotationSentDate__c</fullName>
        <label>見積書送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RenewalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客先名</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RenewalAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalAddress2__c</fullName>
        <label>住所2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalAddress__c</fullName>
        <label>住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受注確定済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalCompanyName__c</fullName>
        <label>送付先（会社名）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalContactFax__c</fullName>
        <label>日本電子・回答先（FAX等）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalContactPosition__c</fullName>
        <label>担当者所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalContactTel__c</fullName>
        <label>日本電子・連絡先（電話番号等）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalCustomerNameReply__c</fullName>
        <label>お客様名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalDeliveryLocation__c</fullName>
        <label>納入場所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalFooterComment__c</fullName>
        <label>フッターコメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalItemsName__c</fullName>
        <label>保守契約機器</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalListOptions__c</fullName>
        <label>オプション</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>